[tool.poetry]
name = "budget_app"
version = "0.1.0"
description = ""
authors = ["Ilya Yudin"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.2"
aiogram = "^2.22.1"
aiohttp = "^3.8.3"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
pytest-asyncio = "^0.12.0"
pytest-runner = "^5.2"
mypy = "^0.981"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
