[tool.poetry]
name = "Budget_app"
version = "0.2.0"
description = ""
authors = ["Ilya Yudin"]

[tool.poetry.dependencies]
python = "3.11.9"
pydantic = "2.8.2"
pydantic-settings = "2.4.0"
aiogram = "3.13.0"
aiohttp = "3.9.2"
gspread-asyncio = "2.0.0"
google-api-python-client = "^2.144.0"

[tool.poetry.dev-dependencies]
pytest = "7.4.3"
mypy = "1.8.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
